tests/machine/x/zig/list_assign.error
Error on line 7: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/list_assign.zig:7:10: error: no member named 'items' in '[]const i32'

6:     nums = &[_]i32{1, 2};
7:     nums.items[1] = 3;
8:     std.debug.print("{any}\n", .{nums[1]});
